plugins {
    id 'com.android.application'
}

android {
    namespace 'com.example.java_npi'
    compileSdk 34

    defaultConfig {
        applicationId "com.example.java_npi"
        minSdk 28
        targetSdk 34
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    buildFeatures {
        viewBinding true
    }
}



dependencies {

    implementation 'io.kommunicate.sdk:kommunicateui:2.7.2'

    implementation 'com.google.guava:guava:30.1-jre'
    implementation 'com.google.guava:listenablefuture:1.0'

    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
    implementation 'com.github.bumptech.glide:glide:4.12.0'
    implementation 'androidx.navigation:navigation-fragment:2.5.3'
    implementation 'androidx.navigation:navigation-ui:2.5.3'
    implementation 'androidx.databinding:compilerCommon:3.2.0-alpha11'
    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
    implementation 'com.journeyapps:zxing-android-embedded:4.1.0'
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'com.google.android.material:material:1.5.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'

    implementation "androidx.biometric:biometric:1.1.0"

}

